--- a/src/pages/projects.css
+++ b/src/pages/projects.css
@@ -9,9 +9,27 @@ img {
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr;
     grid-gap: 24px;
-    width: 100vw;
+    padding: 0 24px 24px 24px;
 }
 
 .project-card {
-
+padding: 48px;
+background-color: var(--color-light);
+border-radius: 3%
 }
+
+.project-img-title {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 18px
+}
+
+.project-github-link {
+    padding-top: 12px;
+    display: flex;
+    flex-direction: row;
+    gap: 12px;
+    align-items: center;
+}
+
