--- a/src/pages/projects.css
+++ b/src/pages/projects.css
@@ -1,35 +1,90 @@
 img {
-    width: 75%;
-    height: 75%;
-    border-radius: 2%
+  width: 75%;
+  height: 75%;
+  border-radius: 2%;
 }
 
 .projects-list {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    grid-gap: 24px;
-    padding: 0 24px 24px 24px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  grid-gap: 32px;
+  padding: 0 48px 24px 48px;
 }
 
 .project-card {
-padding: 48px;
-background-color: var(--color-light);
-border-radius: 3%
+  padding: 42px;
+  background-color: var(--color-light);
+  border-radius: 3%;
+}
+
+.project-card:hover ~ .skills {
+  background-color: var(--color-light);
+}
+
+.project-card:hover {
+  background-color: var(--color-green);
 }
 
 .project-img-title {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding-bottom: 18px
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-bottom: 18px;
+  gap: 12px;
+  color: black;
+}
+
+.project-img {
+  border: var(--border-purple);
+  border-radius: 2px;
+}
+
+.project-techs-list {
+  display: flex;
+  flex-direction: row;
+}
+
+.requirements-list {
+  pointer-events: none;
+  display: none;
+}
+
+.requirement:before {
+  content: '\25b7';
+}
+
+[class~='show'] {
+  pointer-events: auto;
+  display: block;
+  border: var(--border-purple);
+  border-radius: 4px;
+  background-color: var(--color-white);
+  margin: 12px 0;
+  padding: 12px 12px 12px 16px;
+}
+
+.project-areas {
+  display: flex;
+  flex-direction: row;
+  gap: 16px;
+  align-items: flex-start;
+  justify-content: center;
+  padding-bottom: 8px;
+}
+
+.date {
+  font-size: var(--typography-xs);
 }
 
 .project-github-link {
-    padding-top: 12px;
-    display: flex;
-    flex-direction: row;
-    gap: 12px;
-    align-items: center;
+  padding-top: 12px;
+  display: flex;
+  flex-direction: row;
+  gap: 12px;
+  align-items: center;
 }
 
+.project-github-link:hover {
+  text-decoration: underline;
+}
