--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -1,3 +1,5 @@
+
+
 article {
   display: grid;
   grid-template-columns: 60% 40%;
@@ -76,10 +78,11 @@ article {
   flex-direction: column;
   gap: 24px;
   background-color: var(--color-green);
-  border-radius: 4%;
+  border-radius: 12px;
   justify-content: center;
   margin-right: 48px;
   padding-left: 54px;
+  animation: var(--animation-slide-in)
 }
 
 .reason:before,
