--- a/src/pages/projects.css
+++ b/src/pages/projects.css
@@ -1,7 +1,25 @@
 img {
   width: 75%;
   height: 75%;
-  border-radius: 2%;
+  border-radius: 3px;
+}
+
+#projects-subtitle {
+  padding: 24px 24px 24px 48px;
+}
+
+.filter {
+  display: flex;
+  flex-direction: row;
+  padding: 0 0 24px 48px;
+}
+
+#projects-techs-list {
+top: 0
+}
+
+.filter-title {
+  font-size: var(--typography-xs);
 }
 
 .projects-list {
@@ -10,12 +28,13 @@ img {
   grid-template-rows: 1fr 1fr;
   grid-gap: 32px;
   padding: 0 48px 24px 48px;
+  animation: var(--animation-slide-in)
 }
 
 .project-card {
   padding: 42px;
   background-color: var(--color-light);
-  border-radius: 3%;
+  border-radius: 6px;
 }
 
 .project-card:hover ~ .skills {
@@ -37,13 +56,18 @@ img {
 
 .project-img {
   border: var(--border-purple);
-  border-radius: 2px;
+  border-radius: 3px;
 }
 
 .project-techs-list {
   display: flex;
   flex-direction: row;
 }
+
+#project-skills:hover {
+  background-color: var(--color-light);
+}
+
 
 .requirements-list {
   pointer-events: none;
@@ -58,7 +82,7 @@ img {
   pointer-events: auto;
   display: block;
   border: var(--border-purple);
-  border-radius: 4px;
+  border-radius: 6px;
   background-color: var(--color-white);
   margin: 12px 0;
   padding: 12px 12px 12px 16px;
@@ -74,7 +98,7 @@ img {
 }
 
 .date {
-  font-size: var(--typography-xs);
+  font-size: var(--typography-xxs);
 }
 
 .project-github-link {
@@ -87,4 +111,15 @@ img {
 
 .project-github-link:hover {
   text-decoration: underline;
+}
+
+.noProjectsMessage {
+margin: 24px 24px 24px 48px;
+padding: 18px;
+  position: relative;
+  bottom: 24px;
+animation: var(--animation-slide-in);
+background-color: var(--color-light);
+border-radius: 8px;
+width: fit-content;
 }
