--- a/src/pages/projects.css
+++ b/src/pages/projects.css
@@ -2,6 +2,28 @@
   padding: 24px 24px 24px 48px;
 }
 
+.filter {
+  display: flex;
+  flex-direction: row;
+  padding: 0 0 24px 48px;
+  gap:12px;
+}
+
+#projects-techs-list {
+  top: 0;
+}
+
+#projects-techs-list li:nth-child(6),  
+#projects-techs-list li:nth-child(7),
+#projects-techs-list li:nth-child(8),
+#projects-techs-list li:nth-child(9) {
+  display: none;
+}
+
+.filter-title {
+  font-size: var(--typography-xs);
+}
+
 .projects-list {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
@@ -41,10 +63,13 @@
   #projects-subtitle {
 padding: 18px 30px;
   }
+  .filter {
+    display: block;
+    padding: 0 30px 18px 30px;
+  }
   .projects-list, .experinoProjectsMessageist {
     animation: none;
   }
-  
   .projects-list {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -62,4 +87,3 @@ padding: 18px 30px;
 
   
     
-  
