--- a/src/components/cards.css
+++ b/src/components/cards.css
@@ -53,6 +53,9 @@
     height: 75%;
   }
   
+  .project-title {
+    text-align: center;
+  }
   
   .project-techs {
     display: flex;
@@ -104,7 +107,7 @@ width: 100%
   justify-content: center;
   }
 .project-title {
-font-size: var(--typography-xs)
+font-size: var(--typography-xs);
 }
 .project-areas {
 display: block;
