--- a/src/components/cards.css
+++ b/src/components/cards.css
@@ -4,7 +4,12 @@
     grid-gap: 24px;
     padding-bottom: 24px;
   }
-  
+
+  .logo-img {
+    width: 75%;
+    height: 75%;
+    }
+
   .organization {
     font-size: var(--typography-xs);
   }
@@ -24,6 +29,8 @@
   }
 
   #project-card {
+    display: flex;
+    flex-direction: column;
     padding: 42px;
     background-color: var(--color-light);
     border-radius: 6px;
@@ -49,8 +56,8 @@
   .project-img {
     border: var(--border-purple);
     border-radius: 3px;
-    width: 75%;
-    height: 75%;
+    width: 220px;
+    /* height: 75%; */
   }
   
   .project-title {
@@ -59,7 +66,7 @@
   
   .project-techs {
     display: flex;
-    flex-direction: row;
+    gap: 3px;
   }
   
   #project-skills:hover {
@@ -68,11 +75,11 @@
   
   .project-areas {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     gap: 16px;
-    align-items: flex-start;
+    align-items: center;
     justify-content: center;
-    padding-bottom: 8px;
+    padding-bottom: 16px;
   }
   
   .date {
@@ -82,7 +89,6 @@
   .project-github-link {
     padding-top: 12px;
     display: flex;
-    flex-direction: row;
     gap: 12px;
     align-items: center;
   }
