--- a/src/components/techs-lists.css
+++ b/src/components/techs-lists.css
@@ -1,17 +1,24 @@
 .techs-list {
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(48px, 1fr));
+    gap: 4px;
     align-items: center;
-    position: relative;
-    top: -22px;
-    gap: 2px;
+    justify-items: center;
   }
+
   .tech {
     height: 40px;
-    width: 40px;
+    display: flex;
+    justify-content: center;
+  }
+
+  .experience-techs > .experience-tech > .tech-icon {
+    height: 40px;   
   }
   
-  .techs-list li:last-child {
-    width: 20%;
+  .project-areas > .project-techs >.tech {
+    height: 30px;
+    width: 30px;
   }
   
   .techs-list li:nth-child(2),
@@ -23,16 +30,23 @@
     display: flex;
     align-items: center;
     gap: 8px;
-    padding: 12px 0 0 48px
+    padding: 12px 24px
   }
-  
-  .experience-tech {
-    height: 40px;
-    width: 40px;
-  }
-  
+
   #sap-icon {
     width: 60px
+  }
+
+  #Express {
+    margin: 0 8px
+  }
+
+  #MongoDB {
+    margin-left: -6px
+  }
+
+  #excel-icon {
+    padding-left: 8px
   }
   
   #canva-icon {
@@ -43,5 +57,6 @@
   .techs-list {
     gap: 0;
     top: -12px;
+    width: 350px
   }
 }
