--- a/src/components/cards.css
+++ b/src/components/cards.css
@@ -31,9 +31,13 @@
   #project-card {
     display: flex;
     flex-direction: column;
-    padding: 42px;
     background-color: var(--color-light);
-    border-radius: 6px;
+    border-radius: 10px;
+    overflow: hidden;
+  }
+
+  .project-info {
+    padding: 18px 42px
   }
   
   #project-skills:hover {
@@ -54,10 +58,11 @@
   }
   
   .project-img {
-    border: var(--border-purple);
     border-radius: 3px;
-    width: 220px;
-    /* height: 75%; */
+    width: 100%;
+    height: 170px;
+    object-fit: cover;
+ 
   }
   
   .project-title {
@@ -101,12 +106,6 @@
 .logo-img {
 width: 100%;
 height:100%;
-}
-#project-card {
-  padding: 12px;
-}
-.project-img {
-width: 100%
 }
 .project-img-title {
   padding-bottom: 10px;
