--- a/src/pages/experience.css
+++ b/src/pages/experience.css
@@ -11,6 +11,9 @@
   border-radius: 12px;
   background-color: var(--color-light);
   animation: var(--animation-slide-in);
+  height: 70vh;
+  overflow-y: scroll;
+  scroll-behavior: smooth
 }
 
 .skills-list {
