--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -5,7 +5,7 @@
 }
 
 article {
-  padding-left: 24px
+  padding: 0 24px
 }
 
 .personal-basic {
@@ -60,14 +60,16 @@ article {
   padding-left: 26px;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 800px) {
+  article {
+    padding: 0 12px
+  }
   .container {
       display: flex;
       flex-direction: column;
       padding: 18px;
   }
   .personal-basic {
-    padding: 0 12px;
     gap: 18px;
     }
   .name, .personal-description {
