add animation to tech icons

--- a/src/components/Cards/Cards.css
+++ b/src/components/Cards/Cards.css
@@ -45,7 +45,7 @@
   }
   
   #project-card:hover {
-    background-color: var(--color-green);
+    background-color: var(--color-primary);
   }
   
   .project-img-title {
