--- a/src/components/Cards/Cards.css
+++ b/src/components/Cards/Cards.css
@@ -31,17 +31,18 @@
   #project-card {
     display: flex;
     flex-direction: column;
-    background-color: var(--color-light);
+    background-color: #4C4C4C95;
     border-radius: 10px;
     overflow: hidden;
+    border: 1.5px solid var(--color-white);
+    padding: 2px;
+    font-size: var(--typography-xxs)
   }
 
-  .project-info {
-    padding: 18px 42px
-  }
-  
-  #project-skills:hover {
-    background-color: var(--color-light);
+  .project-links {
+  display: flex;
+  justify-content: space-around;
+  padding: 10px
   }
   
   #project-card:hover {
@@ -49,46 +50,39 @@
   }
   
   .project-img-title {
+    height: 300px;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    padding-bottom: 18px;
-    gap: 12px;
     color: black;
+    position: relative;
   }
   
   .project-img {
+    height: 100%;
     border-radius: 3px;
-    width: 100%;
-    height: 170px;
     object-fit: cover;
- 
   }
   
   .project-title {
-    text-align: center;
+    font-size: var(--typography-xs);
   }
   
-  .project-techs {
-    display: flex;
-    gap: 3px;
+  .project-title-description {
+    position: absolute;
+    bottom: 0;
+    background-color: #4C4C4C95;
+    width: 100%;
+    padding: 10px
   }
   
-  #project-skills:hover {
-    background-color: var(--color-light);
-  }
-  
-  .project-areas {
-    display: flex;
-    flex-direction: column;
-    gap: 16px;
-    align-items: center;
-    justify-content: center;
-    padding-bottom: 16px;
-  }
+
   
   .date {
-    font-size: var(--typography-xxs);
+    position: absolute;
+    top: 0;
+    background-color: #4C4C4C95;
+    width: 100%;
+    padding: 10px
   }
   
   .project-github-link {
@@ -111,9 +105,6 @@ height:100%;
   padding-bottom: 10px;
   justify-content: center;
   }
-.project-title {
-font-size: var(--typography-xs);
-}
 .project-areas {
 display: block;
 }
