--- a/src/components/TechsLists/TechsLists.css
+++ b/src/components/TechsLists/TechsLists.css
@@ -1,12 +1,4 @@
-/* .techs-list {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(40px, 1fr));
-    gap: 2px;
-    align-items: center;
-    justify-items: center;
-  } */
-
-.techs-list {
+#home-techs-list {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -14,7 +6,21 @@
   margin-left: -150px
 }
 
-.tech {
+#projects-techs-list {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(40px, 1fr));
+    gap: 2px;
+    align-items: center;
+    justify-items: center;
+  }
+
+  #projects-techs-list > #Vite,  
+  #projects-techs-list > #Visual,
+  #projects-techs-list > #Github {
+    display: none;
+  }
+
+#home-tech {
   width: 40px; 
   height: 40px; 
   display: flex;
@@ -25,25 +31,32 @@
   background: transparent
 }
 
-.techs-list li:nth-child(1) { transform: rotate(0deg) translateY(-150px); }
-.techs-list li:nth-child(2) { transform: rotate(32.7deg) translateY(-150px); }
-.techs-list li:nth-child(3) { transform: rotate(65.4deg) translateY(-150px); }
-.techs-list li:nth-child(4) { transform: rotate(98.1deg) translateY(-150px); }
-.techs-list li:nth-child(5) { transform: rotate(130.8deg) translateY(-150px); }
-.techs-list li:nth-child(6) { transform: rotate(163.5deg) translateY(-150px); }
-.techs-list li:nth-child(7) { transform: rotate(196.2deg) translateY(-150px); }
-.techs-list li:nth-child(8) { transform: rotate(228.9deg) translateY(-150px); }
-.techs-list li:nth-child(9) { transform: rotate(261.6deg) translateY(-150px); }
-.techs-list li:nth-child(10) { transform: rotate(294.3deg) translateY(-150px); }
-.techs-list li:nth-child(11) { transform: rotate(327deg) translateY(-150px); }
+#projects-tech {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transform-origin: center; 
+  background: transparent
+}
 
+.project-techs {
+  display: flex;
+  gap: 3px;
+  padding: 10px;
+  justify-content: space-evenly
+}
 
-
-  /* .tech {
-    height: 40px;
-    display: flex;
-    justify-content: center;
-  } */
+#home-techs-list li:nth-child(1) { transform: rotate(0deg) translateY(-150px); }
+#home-techs-list li:nth-child(2) { transform: rotate(32.7deg) translateY(-150px); }
+#home-techs-list li:nth-child(3) { transform: rotate(65.4deg) translateY(-150px); }
+#home-techs-list li:nth-child(4) { transform: rotate(98.1deg) translateY(-150px); }
+#home-techs-list li:nth-child(5) { transform: rotate(130.8deg) translateY(-150px); }
+#home-techs-list li:nth-child(6) { transform: rotate(163.5deg) translateY(-150px); }
+#home-techs-list li:nth-child(7) { transform: rotate(196.2deg) translateY(-150px); }
+#home-techs-list li:nth-child(8) { transform: rotate(228.9deg) translateY(-150px); }
+#home-techs-list li:nth-child(9) { transform: rotate(261.6deg) translateY(-150px); }
+#home-techs-list li:nth-child(10) { transform: rotate(294.3deg) translateY(-150px); }
+#home-techs-list li:nth-child(11) { transform: rotate(327deg) translateY(-150px); }
 
   .tech-icon {
   width: 40px;
@@ -51,17 +64,20 @@
   background: transparent
   }
 
-  #Github {
+  #Github,  #canva-icon {
    border-radius: 50% 
   }
-
-  .experience-techs > .experience-tech > .tech-icon {
-    height: 40px;   
+  #Express {
+    height: 30px;
+    margin-left: 8px
+  }
+  #MongoDB {
+    margin-left: -6px
   }
 
-  .project-areas > .project-techs >.tech {
-    height: 30px;
-    width: 30px;
+  #project-card > .project-techs >.tech > .tech-icon {
+    height: 20px;
+    width: 20px;
   }
 
   .experience-techs {
@@ -71,27 +87,17 @@
     padding: 12px 24px
   }
 
+  .experience-techs > .experience-tech > .tech-icon {
+    height: 40px;   
+  }
+  
   #sap-icon {
     width: 60px
   }
-
-  #Express {
-    height: 30px;
-    margin-left: 8px
-  }
-
-  #MongoDB {
-    margin-left: -6px
-  }
-
   #excel-icon {
     padding-left: 8px
   }
-  
-  #canva-icon {
-    border-radius: 50%
-  }
-
+ 
   @media screen and (min-width: 480px) and (max-width: 800px) {
   .techs-list {
     gap: 0;
